Палітра кольорів сss

--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,1 +1,22 @@
-body {background-color: turquoise;}
+    body {
+    background-color: #FFFFFF;
+    color: #212121; }
+
+/* колір основного тексту #212121 */
+
+/* вторичний колір тексту #757575 */
+
+/* колір тексту логотипу #FFFFFF */
+
+/* чорний логотип хедер #000000 */
+
+/* колір тексту #FFFFFF 60%  */
+
+/* акцент #2196F3 */
+
+/* вторичний колір фона  #F5F4FA */
+
+/* колір фону героя та футера #2F303A */
+
+/* колір фрна хедера #ECECEC */
+
