--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,6 +1,6 @@
 body {
-background-color: #FFFFFF;
-   color: #212121; 
+background-color: var(--primary-bg-color);
+   color: var(--primary--text-color:); 
 }
 .list{
    list-style: none;  
@@ -24,8 +24,10 @@ background-color: #FFFFFF;
 /* колір фона хедера #ECECEC */
 
 :root {
+    --primary--text-color: #212121;  
     --title-text-color: #757575;
     --accent-color: #2196F3;
+    --primary-bg-color: #FFFFFF;
 }
 
 .logo {
@@ -49,8 +51,12 @@ background-color: #FFFFFF;
     background-color: #2F303A;
 }
 .hero-title{
-    color: #FFFFFF;
+    color: var(--primary-bg-color);
 }
+.button {
+    color: var(--primary-bg-color);
+    background-color: var(--accent-color); 
+  }
 /* section */
 .visually-hidden {
     position: absolute;
@@ -78,6 +84,9 @@ background-color: #FFFFFF;
 .subtitle {
     color: var(--title-text-color);
 }
+
+
+
 
 
 
