--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,10 +1,11 @@
 body {
 background-color: var(--primary-white-color);
-   color: var(--primary--text-color:); 
+color: var(--primary-text-color); 
 }
 .list{
    list-style: none;  
 }
+
 /* колір основного тексту #212121 */
 
 /* вторичний колір тексту #757575 */
@@ -24,14 +25,18 @@ background-color: var(--primary-white-color);
 /* колір фона хедера #ECECEC */
 
 :root {
-    --primary--text-color: #212121;  
+    --primary-text-color: #212121;  
     --title-text-color: #757575;
     --accent-color: #2196F3;
     --primary-white-color: #FFFFFF;
+    --secondary-fon-color: #F5F4FA;
 }
 
 .logo {
     color: #000000;
+}
+.logo-text {
+    color: var(--accent-color)
 }
 /* site-nav */
 .site-nav .link:hover ,
@@ -79,7 +84,7 @@ background-color: var(--primary-white-color);
 
 /* team */
 .section-team {
-    background-size: #F5F4FA;
+    background-size: var(--secondary-fon-color);
 }
 .subtitle {
     color: var(--title-text-color);
