--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,6 +1,7 @@
 body {
 background-color: var(--primary-white-color);
-color: var(--primary-text-color); 
+color: var(--primary-text-color);
+font-family: "Roboto", sans-serif; 
 }
 .list{
    list-style: none;  
