--- a/css/Styles.css
+++ b/css/Styles.css
@@ -40,6 +40,7 @@ font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 31px;
+text-decoration: none;
 }
 
 .logo-text {
@@ -52,6 +53,7 @@ line-height: 31px;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
+text-decoration: none;
 }
 .site-nav .link:hover ,
 .site-nav .link:focus {
@@ -64,6 +66,7 @@ line-height: 16px;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
+text-decoration: none;
 }
 .contacts .link-contacts:hover,
 .contacts .link-contacts:focus {
@@ -79,6 +82,8 @@ line-height: 16px;
 font-weight: 900;
 font-size: 44px;
 line-height: 60px;
+letter-spacing: 0.06em;
+text-transform: uppercase;
 }
 .button  {
     color: var(--primary-white-color);
@@ -87,11 +92,12 @@ line-height: 60px;
 font-weight: 700;
 font-size: 16px;
 line-height: 30px; 
+cursor: pointer; 
   }
 
 .button:hover,      
 .button:focus {
-    background-color: #0977CE; 
+    background-color: #0977CE;
 }
 
 
@@ -120,9 +126,7 @@ line-height: 30px;
 
 .text {
     color: var(--title-text-color);
-    font-style: normal;
-font-weight: 400;
-font-size: 14px;
+    font-size: 14px;
 line-height: 24px;
 letter-spacing: 0.03em;
 }
@@ -139,7 +143,7 @@ letter-spacing: 0.03em;
 
 /* team */
 .section-team {
-    background-size: var(--secondary-fon-color);
+    background-color: var(--secondary-fon-color);
  }
 
 .team {
@@ -158,10 +162,8 @@ letter-spacing: 0.03em;
 
 .subtitle {
     color: var(--title-text-color);
-    font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 19px;
+    font-size: 16px;
+    line-height: 19px;
 }
 
 .team-image {
@@ -180,14 +182,16 @@ font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 31px;
+text-decoration: none;
 }
 
 .link-adress {
  color: var(--primary-white-color);
  font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px; 
+ font-weight: 400;
+ font-size: 14px;
+ line-height: 24px;
+ text-decoration: none; 
 }
 
 .link-items .link-adress:hover,
@@ -196,15 +200,17 @@ line-height: 24px;
 }  
 
 .link-item {
-    color: rgba(255, 255, 255, 0.6);
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
+color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  text-decoration: none;
     }
 
 .link-items .link-item:hover,
 .link-items .link-item:focus {
     color: var(--accent-color);
     
+/* portfolio */
 
