--- a/css/Styles.css
+++ b/css/Styles.css
@@ -60,6 +60,11 @@ text-decoration: none;
     color: var(--accent-color);
 }
 
+.site-nav .link.current {
+    color: var(--accent-color);
+
+}
+
 .link-contacts {
     color: var(--title-text-color);
     font-style: normal;
