--- a/css/Styles.css
+++ b/css/Styles.css
@@ -92,6 +92,7 @@ body {
 .button  {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
+    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.875; 
@@ -211,6 +212,7 @@ body {
 .filter-button {
     cursor: pointer;
     background-color: var(--secondary-fon-color);
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.625;
