--- a/css/Styles.css
+++ b/css/Styles.css
@@ -230,22 +230,25 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.625;
+    letter-spacing: 0.03em;
 }
 
 .filter .filter-button:hover,
 .filter .filter-button:focus {
     background-color: var(--accent-color);
  }
- /* Products */
+ /* products */
  .product-title {
     font-weight: 700;
     font-size: 18px;
-    line-height: 2;   
+    line-height: 2;
+    letter-spacing: 0.06em;
  }
  
 .product {
     font-size: 16px;
     line-height: 1.875;
+    letter-spacing: 0.03em;
 }
  
  
